[tool.poetry]
name = "blok"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
ipdb = "^0.13.7"
pre-commit = "^2.11.1"
coverage = "^5.5"

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 88
use_parentheses = true

[tool.coverage.run]
source = ["blok"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
